<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach">

    <!--    1 Text, 1 List-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="370dp"
        android:background="@color/white"
        android:text="@string/btn_three"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/mylistView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="50dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="223dp"
        android:background="@color/white"
        android:text="@string/dinner_time"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ImageButton
        android:id="@+id/back_option"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/for_image"
        android:src="@drawable/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>